<fix> Исправить по замечаниям